# ado-dod-agent

./: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.cosmos.yml  docker-compose.yml  langgraph.json  pyproject.toml
.codex/: hooks.json
app/: __init__.py
app/api/: main.py
app/auth/: ado_token_provider.py  credentials.py
app/collectors/: __init__.py  change_context.py  execution_context.py  quality_context.py  raw_metadata.py  run_context.py
app/core/: config.py
app/graph/: __init__.py
app/llm/: __init__.py
app/models/: __init__.py  inputs.py  outputs.py
app/normalizers/: __init__.py
app/prompts/: __init__.py
app/scoring/: __init__.py
app/storage/: __init__.py  local_store.py
backend/api/: main.py
docs/: README.md  cosmos-artifact-store.md  deployment-readiness-checklist.md  dod-run-contract.md  enterprise-runtime-config.md  key-vault-config-contract.md  langgraph-deployment.md  langsmith-observability.md  local-cosmos-emulator.md  phase-10c-local-merge-impact.md  post-deploy-validation.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: build_evidence_buckets.py  collect_raw_metadata.py  evaluate_rules.py  generate_service_now_fields.py  init_cosmos.py  init_cosmos_local.py  invoke_dod_langgraph.py  normalize_raw_metadata.py  render_workflow_ascii.py  run_dod_agent.py  smoke_ado_auth.py  smoke_azure_credentials.py  smoke_container_readiness.py  smoke_cosmos.py  smoke_cosmos_local.py  smoke_docker_build.ps1  smoke_dod_contract.py  smoke_dod_graph_cosmos_local.py  smoke_enterprise_runtime_config.py  smoke_graph_state_serialization.py  smoke_keyvault_config.py  smoke_langgraph_dod_import.py  smoke_langgraph_health.py  smoke_langsmith_tracing.py  smoke_llm_access.py  smoke_pipeline_config.py  smoke_runtime_config.py  validate_env.py  validate_service_now_payload.py
tests/: conftest.py  test_ado_additional_clients.py  test_ado_base_client.py  test_ado_token_provider.py  test_build_client.py  test_credentials.py  test_health.py  test_local_store.py  test_raw_metadata_coordinator.py  test_runs_collect_raw_endpoint.py  test_smoke_ado_auth.py
tests/unit/: test_ado_additional_clients.py  test_ado_base_client.py  test_ado_token_provider.py  test_api_models.py  test_artifact_store_contract.py  test_azure_credentials.py  test_azure_foundry_client.py  test_backout_rules.py  test_bucket_3_backout_derivation.py  test_bucket_3_field_refinement.py  test_bucket_3_state_compaction.py  test_bucket_prompts.py  test_build_client.py  test_build_evidence_buckets_script.py  test_canonical_models.py  test_canonical_normalization_state.py  test_canonical_normalizer.py  (+85 more)
tmp/: dod-agent-config.sample.json
(+124 files in other folders)
