[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ado-dod-agent"
version = "0.1.0"
description = "Phase-2 foundation for Azure DevOps raw metadata collection and service integration scaffolding."
readme = "docs/README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "httpx>=0.27,<1.0",
  "azure-identity>=1.17,<2.0",
  "azure-core>=1.30,<2.0",
  "langchain>=0.3,<1.0",
  "langchain-openai>=0.3,<1.0",
  "langgraph>=0.2,<1.0",
  "azure-cosmos>=4.7,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["."]
addopts = "-q"
markers = [
  "cosmos_emulator: tests that require a running local Cosmos DB emulator",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["backend", "scripts", "tests"]
cache_dir = ".cache/mypy_backend"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
